--- a/refs/ref.bib
+++ b/refs/ref.bib
@@ -391,3 +391,25 @@
   note = {Accessed: 2024-12-13}
 }
 
+@misc{katalon_software_testing,
+  author    = {Katalon Team},
+  title     = {What is Software Testing? Definition, Types, and Tools},
+  year      = {n.d.},
+  url       = {https://katalon.com/resources-center/blog/software-testing},
+  note      = {Accessed: 2024-12-13}
+}
+@misc{postman_api_testing,
+  author    = {Postman Team},
+  title     = {Get started in Postman},
+  year      = {n.d.},
+  url       = {https://learning.postman.com/docs/getting-started/overview/},
+  note      = {Accessed: 2024-12-13}
+}
+
+@misc{google_page_speed,
+  author    = {Google},
+  title     = {PageSpeed Insights},
+  year      = {n.d.},
+  url       = {https://developers.google.com/speed/docs/insights/v5/about},
+  note      = {Accessed: 2024-12-13}
+}
