--- a/thesis.tex
+++ b/thesis.tex
@@ -1,5 +1,5 @@
 % 'draft' mode can be used to speed up compilation
-\documentclass[draft]{hcmut-thesis}
+\documentclass[final]{hcmut-thesis}
 
 % \usepackage{pdfpages}
 %\usepackage[draft,pageno]{listofsymbols}
@@ -28,7 +28,7 @@
 % Configurations
 \reporttype{
 REPORT\\
-SPECIALIZED PROJECT}
+CAPSTONE PROJECT}
 \title{Building a system for enterprises to introduce services and quotation in the field of transportation and freight forwarding}
 \defcouncil{COMPUTER SCIENCE - CLC 04}
 \supervisor{
