--- a/refs/ref.bib
+++ b/refs/ref.bib
@@ -413,3 +413,13 @@
   url       = {https://developers.google.com/speed/docs/insights/v5/about},
   note      = {Accessed: 2024-12-13}
 }
+
+@misc{katalon_software_testing_intro,
+  author    = {Katalon Team},
+  title     = {Introduction to Web Testing in Katalon Studio},
+  year      = {n.d.},
+  url       = {https://docs.katalon.com/katalon-studio/get-started/supported-applications-under-test-aut/introduction-to-web-testing-in-katalon-studio},
+  note      = {Accessed: 2024-12-13}
+}
+
+
