--- a/refs/ref.bib
+++ b/refs/ref.bib
@@ -423,3 +423,10 @@
 }
 
 
+@misc{minio,
+  author    = {Minio Team},
+  title     = {Minio},
+  year      = {n.d.},
+  url       = {https://min.io/},
+  note      = {Accessed: 2024-12-13}
+}
